--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "@react-icons/all-files": "^4.1.0",
+    "@types/node-sass": "^4.11.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "sass-convert": "^0.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
