--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL='mongodb+srv://est:FIe9k315w80MW67i@db-mongodb-sgp-bb56ac46.mongo.ondigitalocean.com/est?tls=true&authSource=admin&replicaSet=db-mongodb-sgp'
