--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.13.0",
     "@react-icons/all-files": "^4.1.0",
     "@types/node-sass": "^4.11.7",
+    "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
