--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@types/node-sass": "^4.11.7",
     "axios": "^1.6.8",
+    "axios-hooks": "^5.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
